--- a/index.qmd
+++ b/index.qmd
@@ -24,23 +24,9 @@ execute:
 bibliography: references.bib
 ---
 
-```{=html}
-<!--
-1. Introduction / Presentation and description of the problem
-2. Presentation of the data (present the data by showing the head of your dataframes, showing the types and explaining what is column is/what unit is in.)
-3. Tranformation of data (like agregation, joins, …). Show the result as a table (at least 3). Explain each of them.
--->
-```
-
 # Introduction
 
 Students develop all kinds of habits during their school years. Some pull all-nighters before exams, while others stick to regular study schedules. Some prioritize eight hours of sleep, and others survive on much less. Screen time varies too - from minimal use to constant scrolling. These daily choices likely impact academic performance, but which ones matter most?
-
-```{=html}
-<!--
-Students develop many different habits throughout their academic lives. Some spend long hours studying, while others manage with less preparation. Sleep schedules vary greatly, with some students getting full nights of rest and others cutting sleep short. Time spent on phones, computers, and social media also differs significantly from one student to another. These daily habits likely affect academic performance in various ways.
--->
-```
 
 ## The problem
 
@@ -55,8 +41,6 @@ This project aims to:
 -   Analyze whether screen time helps or hurts school results
 -   Provide visual evidence of what habits correlate with success
 
-The analysis uses data from 1,000 students to identify which daily routines tend to accompany better grades. The goal isn't to prescribe one "right way" to study, but to show what patterns emerge when we look at the numbers. The findings might confirm some expectations while challenging others, offering students practical insights they can test in their own lives.
-
 # Libraries
 
 ```{r}
@@ -70,7 +54,7 @@ library(ggplot2)
 
 # Data presentation
 
-This dataset was obtained from Kaggle(@dataset_cit). It does not include any missing values, and all columns are complete. The dataset contains information about students' study habits, social media usage, sleep patterns, and academic performance.
+The analysis uses data from 1,000 students to identify which daily routines tend to accompany better grades. This dataset was obtained from Kaggle(@dataset_cit). It does not include any missing values, and all columns are complete. The dataset contains information about students' study habits, social media usage, sleep patterns, and academic performance.
 
 ## Data columns
 
@@ -99,11 +83,11 @@ The dataset consists of 1,000 rows and 16 columns. Each row represents a student
 
 ```{r}
 data <- read_csv("student_habits_performance.csv")
-skim(data)
 head(data, 5) %>% kable()
+skim(data)
 ```
 
-Among the 1,000 columns, we ca see that there are no missing values.
+Among the 1,000 columns, we can see that there are no missing values.
 
 ```{r}
 data |> 
@@ -116,6 +100,32 @@ data |>
 
 Through grouping and normalization, student patterns will be uncovered, revealing how study habits, sleep, and screen time relate to academic performance.
 
+## Categorizing students based on study intensity
+
+```{r}
+data_with_study_levels <- data %>%
+  mutate(study_intensity = case_when(
+    study_hours_per_day < 2 ~ "Light",
+    study_hours_per_day >= 2 & study_hours_per_day < 4 ~ "Moderate",
+    study_hours_per_day >= 4 ~ "Intense"
+  ))
+
+data_with_study_levels %>%
+  group_by(study_intensity) %>%
+  slice_sample(n = 2) %>%
+  select(student_id, study_hours_per_day, study_intensity, exam_score) %>%
+  arrange(study_intensity, study_hours_per_day) %>%
+  kable(caption = "Representative Students from Each Study Intensity Level")
+```
+
+This categorizes students into three study intensity levels based on their daily study hours:
+
+-   **Light**: \< 2 hours
+-   **Moderate**: 2 to 4 hours
+-   **Intense**: 4 or more hours
+
+We can see that students with more intense study habits tend to perform better academically.
+
 ## Gender Based Comparison
 
 ```{r}
@@ -124,7 +134,7 @@ data %>%
   summarize(avg_exam_score = mean(exam_score, na.rm = TRUE),
             avg_study_hours = mean(study_hours_per_day, na.rm = TRUE),
             avg_sleep_hours = mean(sleep_hours, na.rm = TRUE)) %>%
-  kable()
+  kable(caption = "Correlation between genders and exam scores")
 ```
 
 From the results above, we can see that students who identify as "Other" have the highest average exam score (70.65) and the most sleep (6.80 hours), while females study slightly more (3.58 hours) and score higher than males, whose averages are marginally lower in all categories.
@@ -154,6 +164,8 @@ Added `performance_group` column to categorize students based on their exam scor
 -   **Excellent**: 90 \<= exam score \< 100
 -   **Outstanding**: exam score = 100
 
+### Performance Groups Summary
+
 ```{r}
 data %>%
   group_by(performance_group) %>%
@@ -179,7 +191,7 @@ data_stats %>%
   mutate(n_percentage = n_students / sum(n_students) * 100) %>%
   select(performance_group, avg_exam_score, avg_study_hours, n_students, n_percentage) %>%
   arrange(desc(n_students)) %>%
-  kable()
+  kable(caption = "Performance Groups Overview")
 ```
 
 The most common performance group is "Good" with 234 students, balancing study hours (3.80) and maintaining solid exam scores (74.40).
@@ -195,10 +207,10 @@ data_stats %>%
   ) %>%
   select(performance_group, avg_exam_score, norm_study_hours, norm_attendance, importance) %>%
   arrange(desc(avg_exam_score)) %>%
-  kable()
+  kable(caption = "Correlation between Study Hours, Attendance and Exam Scores")
 ```
 
-Students who study more tend to perform better. The "Outstanding" group has the highest average study hours (normalized) and the best exam scores, while the "Fail" group has the lowest study hours (normalized) and exam scores (normalized). Attendance percentages remain stable across all performance groups, indicating that while attendance is important, it does not directly correlate with higher exam scores (study time matters more).
+Students who study more tend to perform better. The "Outstanding" group has the highest average study hours (normalized) and the best exam scores, while the "Fail" group has the lowest study hours (normalized) and exam scores. Attendance percentages remain stable across all performance groups, indicating that while attendance is important, it does not directly correlate with higher exam scores **(study time matters more).**
 
 ### Sleep hours among all the groups
 
@@ -206,7 +218,7 @@ Students who study more tend to perform better. The "Outstanding" group has the 
 data_stats %>%
   select(performance_group, avg_sleep_hours) %>%
   arrange(desc(avg_sleep_hours)) %>%
-  kable()
+  kable(caption = "Correlation between Sleep Hours and Performance Groups")
 ```
 
 Across all performance groups, sleep hours remain consistent (around 6-6.8 hours), suggesting that sleep does not directly determine academic success.
@@ -223,31 +235,6 @@ data %>%
 ```
 
 People who spend more than 5 hours on social media or Netflix have an average exam score of 65.86, which is below the overall average of 69.60. This suggests that high screen time may negatively impact academic performance.
-
-## Categorizing students based on study intensity
-
-```{r}
-data_with_study_levels <- data %>%
-  mutate(study_intensity = case_when(
-    study_hours_per_day < 2 ~ "Light",
-    study_hours_per_day >= 2 & study_hours_per_day < 4 ~ "Moderate",
-    study_hours_per_day >= 4 ~ "Intense"
-  ))
-
-data_with_study_levels %>%
-  select(student_id, study_hours_per_day, study_intensity, exam_score) %>%
-  slice_sample(n = 5) %>%
-  arrange(study_hours_per_day) %>%
-  kable(caption = "Sample of Study Intensity Classification")
-```
-
-This categorizes students into three study intensity levels based on their daily study hours:
-
--   **Light**: \< 2 hours
--   **Moderate**: 2 to 4 hours
--   **Intense**: 4 or more hours
-
-We can see that students with more intense study habits tend to perform better academically.
 
 # Exploratory data analysis
 
@@ -284,15 +271,32 @@ ggplot(data, aes(x = performance_group, y = sleep_hours, fill = performance_grou
   labs(title = "Sleep Hours by Performance Group", x = "Performance Group", y = "Sleep Hours")
 ```
 
-The box plot illustrates the distribution of sleep hours across different performance groups. The horizontal axis represents the performance groups, while the vertical axis shows sleep hours, ranging from 0 to 10. Each box represents the interquartile range (IQR) of sleep hours for each group, with the line inside the box indicating the median. The "Outstanding" group has the highest median sleep hours (6.8), while the "Fail" group has the lowest (5.2). The plot suggests that students who perform better tend to get more sleep, although all groups average around 6-7 hours.
+The box plot illustrates the distribution of sleep hours across different performance groups. The horizontal axis represents the performance groups, while the vertical axis shows sleep hours, ranging from 0 to 10. Each box represents the interquartile range (IQR) of sleep hours for each group, with the line inside the box indicating the median. The "Outstanding" group has the highest median sleep hours, while the "Fail" group has the lowest. The plot suggests that students who perform better tend to get more sleep, although all groups average around 6-7 hours.
+
+## Exam Score Distribution by Study Intensity (density plot)
+
+```{r}
+ggplot(data_with_study_levels, aes(x = exam_score, fill = study_intensity)) +
+  geom_density(alpha = 0.5) +
+  theme_minimal() +
+  labs(title = "Exam Score Distribution by Study Intensity")
+```
+
+This density plot compares exam score distributions across study intensity levels. The horizontal axis represents exam scores, while the vertical axis shows the density of students achieving those scores.
+
+- **Intense studiers** show the highest density of scores above 80, and are right-skewed toward top grades.
+- **Moderate studiers** have a more balanced distribution, with peaks around 60-75.
+- **Light studiers** have the lowest density of high scores, indicating many struggle to achieve passing grades.
 
 # Conclusion
 
 Up until now, the analysis reveals three key insights about student performance, namely:
 
-1.  **Study time matters most**: Students scoring \>90% average 5.70 study hours/day vs 1.60 hours for failing students
-2.  **Screen time hurts**: Every performance tier shows 15-30% more screen time than the tier above it
-3.  **Sleep is consistent**: All groups average 6-7 hours, suggesting it's a baseline requirement
+1.  **Study time matters most**: Students scoring higher results tend to study more, although attendance rates remain consistent across performance groups.
+2.  **Screen time hurts**: Students with high social media or Netflix usage (over 5 hours daily) score lower on exams, meaning entertainment distractions have negative impact on performance.
+3.  **Sleep is consistent**: All groups average 6-7 hours, suggesting it's a baseline requirement.
+
+## Visualizing distributions
 
 ```{r}
 data %>%
@@ -309,11 +313,11 @@ data %>%
   theme_minimal()
 ```
 
-The analysis shows that study time has the strongest correlation with exam scores, while screentime negatively impacts performance. Sleep duration remains consistent across groups, suggesting it is a baseline requirement for all students.
+It is worth noticing that the distributions of attendance and sleep hours are almost identical, indicating that students who attend classes regularly also tend to maintain a consistent sleep schedule. This suggests that good attendance may be linked to better overall habits, including sleep
 
-Netflix hours have a weak negative correlation with exam scores, while Social media hours show a slightly stronger negative trend. Attendance percentage has a minimal impact on exam scores, indicating that while it is important, it does not directly correlate with higher academic performance.
-
-# Summary
+- The analysis shows that study time has the strongest correlation with exam scores, while screen time negatively impacts performance. Sleep duration remains consistent across groups, suggesting it is a baseline requirement for all students.
+- Attendance percentage has a minimal impact on exam scores, indicating that while it is important, it does not directly correlate with higher academic performance.
+- Netflix hours have a weak negative correlation with exam scores, while Social media hours show a slightly stronger negative trend. 
 
 In summary, the analysis highlights the importance of study habits and their impact on academic performance. Students who dedicate more time to studying tend to achieve better exam scores, while excessive screen time can hinder their success. Sleep duration remains relatively stable across performance groups, suggesting it is a necessary foundation for academic achievement.
 
